Bug 1844213: Add accessibility.tabfocus to the dynamic pref override list r=Jamie, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D184030